# doob

./: .gitignore  Cargo.toml  LICENSE  README.md  ci.sh
.config/: nextest.toml
.github/workflows/: ci.yml  release.yml
docs/sync/: testing.md
docs/sync/providers/: beads.md
src/: cli.rs  error.rs  lib.rs  main.rs
src/commands/: add.rs  complete.rs  due.rs  kan.rs  list.rs  mod.rs  remove.rs  undo.rs
src/commands/note/: add.rs  list.rs  mod.rs  remove.rs
src/context/: git.rs  mod.rs
src/db/: mod.rs  schema.rs
src/models/: mod.rs  note.rs  todo.rs
src/output/: human.rs  json.rs  kanban.rs  mod.rs  note_human.rs  note_json.rs
src/sync/: domain.rs  mod.rs
src/sync/adapters/: beads.rs  mod.rs
tests/: add_test.rs  beads_adapter_test.rs  beads_integration_test.rs  complete_test.rs  context_integration_test.rs  context_test.rs  integration_test.rs  json_output_test.rs  kan_test.rs  list_output_test.rs  list_test.rs  note_test.rs  sync_domain_test.rs  sync_service_test.rs
tests/common/: mod.rs
