[package]
name = "doob"
version = "0.1.0"
edition = "2021"

[lib]
name = "doob"
path = "src/lib.rs"

[[bin]]
name = "doob"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
surrealdb = { version = "2", features = ["kv-rocksdb"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
git2 = "0.19"
uuid = { version = "1", features = ["v4", "serde"] }
dirs-next = "2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
serial_test = "3.3.1"
